# Joint-Space-SCA

./: .gitignore  README.md  index.md
dataset-creation/fcl-sampling/: CMakeLists.txt  README.md  main_new.cpp
dataset-creation/fcl-sampling/data/: still_posture.txt
dataset-creation/fcl-sampling/meshes/: iCub body parts.xlsx  idx_map_old.txt
dataset-creation/fcl-sampling/meshes/output/: 1.txt  18.txt  24.txt  26.txt  32.txt  34.txt
dataset-creation/fcl-sampling/model/sdfast/: icub_air.sd  icub_air_d.c  icub_air_i  icub_air_s.c  sdfast_codes_here.txt
dataset-creation/fcl-sampling/model/src/: Basics.cpp  Model.cpp
simulation/: CMakeLists.txt  README.md  Ros-commands-for-optitrack.txt  main.cpp  readme.txt
simulation/benchmark/: CMakeLists.txt  main.cpp
simulation/dependencies/IKCG_cvxgen/: IKCG_description.txt
simulation/dependencies/IKCG_cvxgen_noSCA/: IKCG_description.txt
simulation/dependencies/IMU/: CMakeLists.txt  main.cpp
simulation/dependencies/IMU/include/: IMU.h  mip.h  mip_gx5_25.h  mip_gx5_imu.h
simulation/dependencies/IMU/src/: IMU.cpp  mip_sdk_inteface.c
simulation/dependencies/NN_models/0cm/: 1.pt  10.pt  2.pt  3.pt  4.pt  5.pt  6.pt  7.pt  8.pt  9.pt
simulation/dependencies/NN_models/3cm/: 1.pt  10.pt  2.pt  3.pt  4.pt  5.pt  6.pt  7.pt  8.pt  9.pt
simulation/dependencies/collision/meshes/: idx_map.txt  idx_map_c.txt  idx_map_c_bk.txt
simulation/dependencies/collision/meshes/input/: head.txt  l_foot.txt  l_forearm.txt  l_shoulder_2.txt  lap_belt_1.txt  r_foot.txt  r_hip_2.txt  r_shank.txt  (+2 more)
simulation/dependencies/collision/to_install/: readme.txt
simulation/dependencies/cvxgen_set_prefix/: readme.txt  set_prefix.m
simulation/dependencies/cvxgen_set_prefix/IKCG_cvxgen/: IKCG_ldl.c  IKCG_matrix_support.c  IKCG_solver.c  IKCG_solver.h  IKCG_testsolver.c  IKCG_util.c
simulation/dependencies/cvxgen_set_prefix/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
simulation/dependencies/dist2ellipse/: jacob.m
simulation/dependencies/jac_sca/: jac_sca.cpp  jac_sca.h
simulation/dependencies/lagsDS-lib/: CMakeLists.txt
simulation/dependencies/lagsDS-lib/include/: GPRwrap.h  lagsDS.h  utils.h
simulation/dependencies/lagsDS-lib/mathlib/: CMakeLists.txt  README.md
simulation/dependencies/lagsDS-lib/src/: test_gpr.cpp  test_lagsDS.cpp
simulation/dependencies/lagsDS-lib/test/: test_gpr  test_lagsDS
simulation/dependencies/log/: analysis.m  getname.m  log_calibration.txt  log_calibration2.txt
simulation/dependencies/lpvDS-lib/: .travis.yml  CMakeLists.txt  README.md
simulation/dependencies/lpvDS-lib/include/: GMM.h  lpvDS.h  utils.h
simulation/dependencies/lpvDS-lib/src/: test_lpvDS.cpp
simulation/dependencies/lpvDS-lib/test/: test_lpvDS
simulation/dependencies/nn_model_eval/: CMakeLists.txt  nn_eval.cpp  nn_eval.h
simulation/dependencies/sdfast/: icub_air.sd  icub_air_d.c  icub_air_lib.c
simulation/dependencies/wrapper/include/: Wrapper.h
simulation/dependencies/wrapper/src/: Wrapper.cpp
simulation/gazebo-yarp-plugins/plugins/: CMakeLists.txt
simulation/gazebo-yarp-plugins/plugins/GetLinkWorldPose/: CMakeLists.txt
simulation/gazebo-yarp-plugins/plugins/GetObjectWorldPose/: CMakeLists.txt
simulation/gazebo/objects/BaseBig/: model.config  model.sdf
simulation/gazebo/objects/BoxBig/: model.config  model.sdf
simulation/gazebo/objects/BoxKinematic/: model.config  model.sdf
simulation/gazebo/objects/BoxLeft/: model.config  model.sdf
simulation/gazebo/objects/BoxRight/: model.config  model.sdf
simulation/gazebo/objects/BoxSmall/: model.config  model.sdf
simulation/gazebo/objects/BoxWood/: model.config  model.sdf
simulation/gazebo/objects/BoxWood_small/: model.config  model.sdf
simulation/gazebo/objects/BoxWood_thin/: model.config  model.sdf
simulation/gazebo/objects/BrickWall/: model.config  model.sdf
simulation/gazebo/objects/Broom/: model.config  model.sdf
simulation/gazebo/objects/Cart/: model.config  model.sdf
simulation/gazebo/objects/base/: model.config  model.sdf
simulation/gazebo/objects/base2/: model.config  model.sdf
simulation/gazebo/objects/base3/: model.config  model.sdf
simulation/gazebo/plugins/colorChange_world/: CMakeLists.txt  color_change.cpp  color_change.h
simulation/gazebo/robots/icub/: icub.sdf
simulation/gazebo/robots/icub2/: icub.sdf  model.config
simulation/gazebo/robots/icub5/: model.config  model.urdf
simulation/gazebo/robots/icub_big_hands/: icub.sdf  icubold.sdf
simulation/gazebo/worlds/: arms_ds.world  between.world  conveyerbelt.world  grasping_ds_prev.world  grasping_ds_rot.world  grasping_ds_shift.world  grasping_ds_straight.world  kinematic_box_grasping_ds.world  narrow_pathway.world  simple.world  single_leg.world  wall.world
simulation/icub33/: CMakeLists.txt
simulation/icub5/: CMakeLists.txt  data.txt
simulation/icubsim/: CMakeLists.txt
simulation/include/: Basics.h  Collision.h  Contacts.h  InverseKinematics.h  Joints.h  Manipulation.h  MedianFilter.h  MeshUtils.h  Model.h  Navigation.h  Object.h  Quaternions.h  Walking.h
simulation/models/: nav-target1-both.mat  nav-target1-both.yml  nav-target1-left.mat  nav-target1-left.yml  nav-target1-right.mat  nav-target1-right.yml
simulation/models/nav-target1-both/: A_k  Mu  Priors  Sigma  Theta_GPR_data.txt  Theta_GPR_model.txt  attractor  dimensions
simulation/models/nav-target1-left/: A_k  Mu  Priors  Sigma  Theta_GPR_data.txt  Theta_GPR_model.txt  attractor
simulation/models/nav-target1-right/: A_k  Mu  Priors  Sigma  Theta_GPR_data.txt  Theta_GPR_model.txt  attractor  dimensions
simulation/real/: CMakeLists.txt  make_dead_zones.m
simulation/repo/: main (copy).cppx  main (copy2).cppx  main (copy3).cppx  main (copy4).cppx
simulation/sim/: CMakeLists.txt
simulation/src/: Basics.cpp  Collision.cpp  Contacts.cpp  InverseKinematics.cpp  Joints.cpp  Manipulation.cpp  MedianFilter.cpp  MeshUtils.cpp  Model.cpp  Navigation.cpp  Object.cpp  Quaterions.cpp  Walking.cpp
(+240 files in other folders)
